# sdwis-extractor

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
modules/: __init__.py
modules/adapters/: factories.py
modules/adapters/auth/: browser_session.py  config.py  http_test.py  http_validator.py  sdwis_session.py
modules/adapters/export_schema/: __init__.py  base_schema.py  general_schema.py  inspection_schema.py  schema_loader.py
modules/adapters/extractors/: deficiency_types.py  legal_entities.py  native_sdwis.py  sample_schedules.py  water_systems.py
modules/adapters/output/: csv.py  enhanced_csv.py  enhanced_json.py  json.py
modules/adapters/progress/: cli.py  silent.py  streamlit.py
modules/adapters/ui/: __init__.py  streamlit_app.py
modules/cli/: main.py
modules/core/: __init__.py  data_type_mapper.py  domain.py  domain_events.py  enhanced_validation.py  exceptions.py  export_configuration.py  export_orchestration.py  export_service.py  factory_ports.py  ports.py  registry.py  schema_versioning.py  services.py  session_manager.py  validation.py
tests/: README.md  conftest.py
tests/architecture/: test_architecture_improvements.py  test_hexagonal_compliance.py
tests/contract/: test_extraction_port_compliance.py
tests/fixtures/: test_helpers.py
tests/integration/: test_batch_session_reuse.py  test_context_manager.py  test_deficiency_types_extraction.py  test_inspection_mode.py  test_modular_architecture.py  test_native_extractors.py  test_session_reuse.py  test_streamlit_ui.py
(+5 files in other folders)
